--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ footer{padding:15px;text-align:center;background:#0b76ef;color:#fff;margin-top:2
 <section id="offer">
   <div>
     <h1>Dussehra Special Offer</h1>
-    <p>Celebrate <b>Durga Puja</b>with Knowledge! <h4 id="offer-glow "class="GRABE">GRABE THE KNOWLEDGE WITH <B id="rs">30RS&nbsp</B>ONLY</h4></p>
+    <p>Celebrate <b>Durga Puja</b>with Knowledge! <h4 id="offer-glow "class="GRABE">GRAB THE KNOWLEDGE WITH <B id="rs">30RS&nbsp</B>ONLY</h4></p>
     <p id="offer-glow"><strong>OFFER VALID TILL 8TH OCTOBER</strong></p>
     <a href="#contact">Enroll Now</a>
   </div>
